--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^8.8.4",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "schema-dts": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
